<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_check_net"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.mpzn.mpzn.activity.CheckNetActivity">
    <com.mpzn.mpzn.views.MyActionBar
        android:id="@+id/action_bar"
        android:background="@color/red_theme"
        app:title_color="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.mpzn.mpzn.views.MyActionBar>
    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/font_black_0"
            android:textSize="20sp"
            android:drawableLeft="@drawable/blue_suc"
            android:text="@string/check_net_suc"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/ll_checknet_ing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_black_0"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_check_net_ing" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_check_net"
        android:layout_below="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:text="诊断网络"
        android:textSize="18sp"
        android:background="@drawable/btn_bg_red_to_darkred"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_check_net"
        android:textColor="@color/font_black_2"
        android:padding="20dp"
        android:text="@string/check_net_tips"/>

</RelativeLayout>
