<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/sticky_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_vp_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/fafafa"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_rxlp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/home_vp_title_selector"
            android:button="@null"
            android:background="@drawable/home_vptitle_bg"
            android:text="@string/home_bottom_vp_tv1"
            android:textSize="16sp"/>
        <View
            android:id="@+id/line_l"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/home_bg"/>
        <RadioButton
            android:id="@+id/rb_dzyh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textColor="@color/home_vp_title_selector"
            android:text="@string/home_bottom_vp_tv2"
            android:background="@drawable/home_vptitle_bg"
            android:textSize="16sp"/>
        <View
            android:id="@+id/line_r"
            android:visibility="invisible"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/home_bg"/>
        <RadioButton
            android:id="@+id/rb_qycf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/home_vp_title_selector"
            android:background="@drawable/home_vptitle_bg"
            android:text="@string/home_bottom_vp_tv3"
            android:textSize="16sp"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp">
        <View
            android:visibility="invisible"
            android:id="@+id/line_b1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/home_bg"/>
        <View
            android:id="@+id/line_b2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/home_bg"/>
        <View
            android:id="@+id/line_b3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/home_bg"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>